[package]
name = "logflow"
version = "0.1.0"
edition = "2021"
authors = ["Özer Gökalpsezer <ddoemonn@github.com>"]
description = "A beautiful, customizable, and performant logging library for Rust with perfect terminal UI"
homepage = "https://github.com/ddoemonn/LogFlow"
repository = "https://github.com/ddoemonn/LogFlow"
license = "MIT OR Apache-2.0"
keywords = ["logging", "terminal", "colors", "async", "nested"]
categories = ["development-tools::debugging"]
readme = "README.md"

[dependencies]
owo-colors = "4.0"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["time", "sync", "rt", "macros"], optional = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
once_cell = "1.0"
futures = { version = "0.3", optional = true }

[features]
default = ["colors", "async"]
colors = []
async = ["tokio", "futures"]
json = []
no-std = []

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
